[package]
name = "chapter04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.19.1", features = ["full"] }