[package]
name = "colab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
serde_json = "1.0.81"
parking_lot = "0.12.1"
tokio = {version = "1.19.2", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
handle-errors = { path = "handle-errors", version = "0.1.0"}